test/syntax/19-statement-err.c
// ======================================================================

/* statement -> case_stmt */

// ======================================================================

void main(void)
{
  int i;

  i = 0;
  switch (i) {
    casa 0:	// error: not case statement
      i = 1;
      break;
    default:
      i = 0;
  }

}

// ======================================================================
